package fpt;

option java_package = "nirvana.hall.protocol.fpt";
option java_outer_classname = "TypeDefinitionProto";
/**
比对类型
*/
enum MatchType {
  FINGER_TT = 1;
  FINGER_TL = 2;
  FINGER_LT = 3;
  FINGER_LL = 4;
  PALM_TT = 5;
  PALM_TL = 6;
  PALM_LT = 7;
  PALM_LL = 8;
}
/**
指位定义
*/
enum FingerFgp {
	FINGER_UNKNOWN	= 0;	//不确定
	FINGER_R_THUMB	= 1;	//右拇
	FINGER_R_INDEX	= 2;	//右食
	FINGER_R_MIDDLE	= 3;	//右中
	FINGER_R_RING	= 4;	//右环
	FINGER_R_LITTLE	= 5;	//右小
	FINGER_L_THUMB	= 6;	//左姆
	FINGER_L_INDEX	= 7;	//左食
	FINGER_L_MIDDLE	= 8;	//左中
	FINGER_L_RING	= 9;	//左环
	FINGER_L_LITTLE	= 10;	//左小
}